nesc-frontend/src/test/resources/integration/programs/bad/bad10/C.nc
/* Contradictory storage-class specifiers. */

extern static char buffer[1024];

configuration C
{
}
implementation
{
}
